Add PostgreSQL Persistence (docker-compose)

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-export DEBUG_MODE="True"
-export DB_URL="mongodb+srv://todo-list-app:FgXNb2qGNF2wQP6a@cluster0.kuwfa.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
-export DB_NAME="mongodb"
+DEBUG_MODE=True
+MONGODB_URL=mongodb+srv://todo-list-app:FgXNb2qGNF2wQP6a@cluster0.kuwfa.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_NAME=mongodb
+SECRET_KEY=supersecretkey
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_SERVER=pgsql-todolist
+POSTGRES_PORT=5432
+POSTGRES_DB=postgres
+DATABASE_TODO_TABLE=todolist2
