--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,10 @@
-export DEBUG_MODE=True # False in production
-export DB_URL="mongodb_connection_string"
-export DB_NAME="mongodb_database"
+DEBUG_MODE=True # False in production
+MONGODB_URL=mongodb_connection_string
+MONGODB_NAME=mongodb
+SECRET_KEY=supersecretkey
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_SERVER=pgsql-todolist
+POSTGRES_PORT=5432
+POSTGRES_DB=postgres
+DATABASE_TODO_TABLE=todolist2
