--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,20 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+alembic==1.5.8
+    # via -r requirements.in
 appdirs==1.4.4
     # via black
+asyncpg==0.22.0
+    # via databases
 black==20.8b1
     # via -r requirements.in
 click==7.1.2
     # via
     #   black
     #   uvicorn
+databases[postgresql]==0.4.3
+    # via -r requirements.in
 dnspython==2.1.0
     # via
     #   -r requirements.in
@@ -28,6 +34,10 @@ httptools==0.1.1
     # via uvicorn
 idna==3.1
     # via email-validator
+mako==1.1.4
+    # via alembic
+markupsafe==1.1.1
+    # via mako
 mccabe==0.6.1
     # via flake8
 motor==2.3.1
@@ -48,12 +58,23 @@ pyflakes==2.2.0
     # via flake8
 pymongo==3.11.3
     # via motor
+python-dateutil==2.8.1
+    # via alembic
 python-dotenv==0.15.0
     # via uvicorn
+python-editor==1.0.4
+    # via alembic
 pyyaml==5.4.1
     # via uvicorn
 regex==2020.11.13
     # via black
+six==1.15.0
+    # via python-dateutil
+sqlalchemy==1.3.24
+    # via
+    #   -r requirements.in
+    #   alembic
+    #   databases
 starlette==0.13.6
     # via fastapi
 toml==0.10.2
